--- a/ros_android_E4/build.gradle
+++ b/ros_android_E4/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.ros_android_e4"
-        minSdkVersion 24
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -24,12 +24,20 @@ android {
 
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+allprojects {
+    repositories {
+        jcenter()
+        flatDir {
+            dirs 'libs'
+        }
+    }
+}
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+dependencies {
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation 'com.empatica.empalink:empalink:2.1@aar'
+    implementation files('libs/empatica_e4_msgs-0.3.0.jar')
+    implementation 'com.github.rosjava.android_remocons:common_tools:[0.3,0.4)'
+    implementation 'org.ros.android_core:android_core_components:[0.4,0.5)'
+    implementation 'org.ros.rosjava_core:rosjava_geometry:[0.3,0.4)'
 }
